Fixed tooltip not showing on some sections

--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -107,9 +107,10 @@ body {
 
 .structured-container {
     .structured-item {
-        padding: 0 2rem;
+        padding: 2.6rem 2rem;
         text-align: center;
         gap: 1rem;
+
         .skill-title {
             font-size: 32px;
             font-weight: 700;
